# haskell-lxd-client

./: .travis.yml  LICENSE  README.md  lxd-client.cabal  release.sh  stack.yaml
example/: Main.hs
src/Network/LXD/: Client.hs  Prelude.hs
src/Network/LXD/Client/: API.hs  Commands.hs  Events.hs  Remotes.hs  Types.hs
src/Network/LXD/Client/Internal/: Compatibility.hs  Prelude.hs
src/Network/LXD/Client/Internal/Compatibility/: WebSockets.hs
test/: Integration.hs  Main.hs  Spec.hs  Testing.hs
test/Integration/: API.hs
