name:                lxd-client
version:             0.1.0.0
synopsis:            LXD REST API Client for Haskell
description:
    Implementation of a REST API client of LXD in Haskell.
homepage:            https://github.com/hverr/haskell-lxd-client#readme
license:             GPL-3
license-file:        LICENSE
author:              Henri Verroken
maintainer:          henriverroken@gmail.com
copyright:           2017 Henri Verroken
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.LXD.Client
                     , Network.LXD.Client.API
                     , Network.LXD.Client.Types
                     , Network.LXD.Prelude
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , connection
                     , containers
                     , data-default
                     , directory
                     , either
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , mtl
                     , servant
                     , servant-client
                     , text
                     , tls
                     , transformers
                     , x509
                     , x509-store
                     , x509-validation
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude OverloadedStrings
  default-language:    Haskell2010

test-suite lxd-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Integration.API
                     , Testing
  build-depends:       base
                     , lxd-client
                     , containers
                     , data-default
                     , either
                     , mtl
                     , transformers
                     , servant-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  NoImplicitPrelude OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hverr/haskell-lxd-client
